[gd_scene load_steps=2 format=3 uid="uid://djwmgw835k35h"]

[ext_resource type="Script" path="res://src/server/PlayerInfoScript.gd" id="1_xmwnl"]

[node name="MultiplayerPlayerInfo" type="HBoxContainer"]
custom_minimum_size = Vector2(800, 40)
offset_right = 444.0
offset_bottom = 31.0
script = ExtResource("1_xmwnl")

[node name="VSeparator0" type="VSeparator" parent="."]
layout_mode = 2

[node name="Kick" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Kick"

[node name="VSeparator1" type="VSeparator" parent="."]
layout_mode = 2

[node name="Player" type="OptionButton" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "NONE"
popup/item_1/text = "PLAYER"
popup/item_1/id = 1
popup/item_2/text = "AI"
popup/item_2/id = 2

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="PlayerName" type="Label" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2

[node name="Faction" type="OptionButton" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 1
fit_to_longest_item = false
item_count = 6
popup/item_0/text = "NONE"
popup/item_1/text = "BLACK"
popup/item_1/id = 1
popup/item_2/text = "BLUE"
popup/item_2/id = 2
popup/item_3/text = "GREEN"
popup/item_3/id = 3
popup/item_4/text = "RED"
popup/item_4/id = 4
popup/item_5/text = "YELLOW"
popup/item_5/id = 5

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2

[node name="Team" type="SpinBox" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="VSeparator5" type="VSeparator" parent="."]
layout_mode = 2

[node name="Ping" type="Label" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VSeparator6" type="VSeparator" parent="."]
layout_mode = 2

[node name="Ready" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ùå"

[node name="VSeparator7" type="VSeparator" parent="."]
layout_mode = 2

[connection signal="pressed" from="Kick" to="." method="getKicked"]
[connection signal="item_selected" from="Player" to="." method="selectPlayer"]
[connection signal="item_selected" from="Faction" to="." method="selectFaction"]
[connection signal="value_changed" from="Team" to="." method="setTeam"]
[connection signal="pressed" from="Ready" to="." method="toggleReady"]
